사진의 절대경로 수정

--- a/minwoo/pages/check.html
+++ b/minwoo/pages/check.html
@@ -89,10 +89,10 @@
       font-weight: 600;
     }
     #coment {
-      width: 318px;
-      height: 79px;
+      width: 315px;
+      height: 75px;
 
-      margin-left: 32px;
+      margin-left: 35px;
 
       border: none;
       border-radius: 10px;
@@ -220,7 +220,7 @@
       <div id="header">
         <img
           id="trash-img"
-          src="/images/mdi_trash-can.png"
+          src="/mungTeam/minwoo/images/mdi_trash-can.png"
           style="width: 40px; height: 40px"
           onclick="delBtn()"
         />
@@ -237,20 +237,22 @@
 
       <div id="comment-box">
         <p id="comentNum">댓글(2)</p>
-        <input type="text" id="coment" placeholder="댓글을 입력해주세요" />
-        <div class="comment-img">
-          <img
-            src="/images/Send Button.png"
-            id="send-btn"
-            style="width: 25px; height: 25px"
-          />
+        <div id="send-box">
+          <input type="text" id="coment" placeholder="댓글을 입력해주세요" />
+          <div id="btn-box">
+            <img
+              src="/mungTeam/minwoo/images/Send Button.png"
+              id="send-btn"
+              style="width: 25px; height: 25px"
+            />
+          </div>
         </div>
       </div>
 
       <div id="coment1">
         <img
           class="coment-img"
-          src="/images/Ellipse 3.png"
+          src="/mungTeam/minwoo/images/Ellipse 3.png"
           style="width: 40px; height: 40px"
         />
         <p class="coment-name">미영</p>
@@ -259,7 +261,7 @@
       <div id="coment2">
         <img
           class="coment-img"
-          src="/images/Ellipse 3.png"
+          src="/mungTeam/minwoo/images/Ellipse 3.png"
           style="width: 40px; height: 40px"
         />
         <p class="coment-name">미영</p>
@@ -270,45 +272,51 @@
           <span>
             <img
               id="cal"
-              src="/images/cal.png"
+              src="/mungTeam/minwoo/images/cal.png"
               style="width: 65px; height: 65px"
             />
           </span>
           <span>
             <img
               id="circle"
-              src="/images/circle.png"
+              src="/mungTeam/minwoo/images/circle.png"
               style="width: 60px; height: 60px"
             />
           </span>
           <span>
             <img
               id="book"
-              src="/images/book.png"
+              src="/mungTeam/minwoo/images/book.png"
               style="width: 40px; height: 40px"
             />
           </span>
           <span>
             <img
               id="tong"
-              src="/images/static.png"
+              src="/mungTeam/minwoo/images/static.png"
               style="width: 37px; height: 37px"
             />
           </span>
         </div>
         <div id="green-section2">
           <span id="home">
-            <img src="/images/home.png" style="width: 30px; height: 30px" />
+            <img
+              src="/mungTeam/minwoo/images/home.png"
+              style="width: 30px; height: 30px"
+            />
           </span>
           <span id="setting">
-            <img src="/images/setting.png" style="width: 30px; height: 30px" />
+            <img
+              src="/mungTeam/minwoo/images/setting.png"
+              style="width: 30px; height: 30px"
+            />
           </span>
         </div>
       </div>
     </div>
 
-    <script src="/js/edit.js"></script>
-    <script src="/js/del.js"></script>
-    <script src="/js/check.js"></script>
+    <script src="/mungTeam/minwoo/js/edit.js"></script>
+    <script src="/mungTeam/minwoo/js/del.js"></script>
+    <script src="/mungTeam/minwoo/js/check.js"></script>
   </body>
 </html>
