--- a/minwoo/pages/login.html
+++ b/minwoo/pages/login.html
@@ -150,6 +150,6 @@
       </div>
     </div>
 
-    <script src="/js/login.js"></script>
+    <script src="/mungTeam/minwoo/js/login.js"></script>
   </body>
 </html>
