--- a/minwoo/pages/main.html
+++ b/minwoo/pages/main.html
@@ -238,43 +238,49 @@
           <span>
             <img
               id="cal"
-              src="/images/cal.png"
+              src="/mungTeam/minwoo/images/cal.png"
               style="width: 65px; height: 65px"
             />
           </span>
           <span id="write-form">
             <img
               id="circle"
-              src="/images/circle.png"
+              src="/mungTeam/minwoo//images/circle.png"
               style="width: 60px; height: 60px"
             />
 
             <img
               id="book"
-              src="/images/book.png"
+              src="/mungTeam/minwoo//images/book.png"
               style="width: 40px; height: 40px"
             />
           </span>
           <span>
             <img
               id="tong"
-              src="/images/static.png"
+              src="/mungTeam/minwoo//images/static.png"
               style="width: 37px; height: 37px"
             />
           </span>
         </div>
         <div id="green-section2">
           <span id="home">
-            <img src="/images/home.png" style="width: 30px; height: 30px" />
+            <img
+              src="/mungTeam/minwoo//images/home.png"
+              style="width: 30px; height: 30px"
+            />
           </span>
           <span id="setting">
-            <img src="/images/setting.png" style="width: 30px; height: 30px" />
+            <img
+              src="/mungTeam/minwoo//images/setting.png"
+              style="width: 30px; height: 30px"
+            />
           </span>
         </div>
       </div>
     </div>
 
-    <script src="/js/main.js"></script>
-    <script src="/js/wrtie.js"></script>
+    <script src="/mungTeam/minwoo/js/main.js"></script>
+    <script src="/mungTeam/minwoo/js/wrtie.js"></script>
   </body>
 </html>
