--- a/minwoo/pages/write.html
+++ b/minwoo/pages/write.html
@@ -152,7 +152,7 @@
         <div id="save">
           <img
             id="circle"
-            src="/images/circle.png"
+            src="/mungTeam/minwoo/images/circle.png"
             style="width: 60px; height: 60px"
           />
           <div id="text-save"><b>저장</b></div>
@@ -161,14 +161,14 @@
           <span>
             <img
               id="add-photo"
-              src="/images/ic_round-image.png"
+              src="/mungTeam/minwoo/images/ic_round-image.png"
               style="width: 40px; height: 40px"
             />
           </span>
           <span>
             <img
               id="setting"
-              src="/images/setting.png"
+              src="/mungTeam/minwoo/images/setting.png"
               style="width: 33px; height: 33px"
             />
           </span>
@@ -176,7 +176,7 @@
       </div>
     </div>
 
-    <script src="/js/save.js"></script>
-    <script src="/js/clock.js"></script>
+    <script src="/mungTeam/minwoo/js/save.js"></script>
+    <script src="/mungTeam/minwoo/js/clock.js"></script>
   </body>
 </html>
