수정/삭제/댓글빼고 구현 완료

--- a/minwoo/pages/check.html
+++ b/minwoo/pages/check.html
@@ -88,6 +88,15 @@
       font-family: Inter;
       font-weight: 600;
     }
+    #btn-box {
+      margin-top: -35px;
+      margin-bottom: 40px;
+    }
+
+    #send-btn {
+      margin-left: 316px;
+    }
+
     #coment {
       width: 315px;
       height: 75px;
@@ -222,12 +231,12 @@
           id="trash-img"
           src="/mungTeam/minwoo/images/mdi_trash-can.png"
           style="width: 40px; height: 40px"
-          onclick="delBtn()"
         />
         <button id="reset"><b>수정</b></button>
       </div>
 
       <div id="white-box">
+        <div id="id">id</div>
         <div id="date">2023년 XX월 XX일</div>
         <div id="line"></div>
         <div>
