--- a/minwoo/pages/join.html
+++ b/minwoo/pages/join.html
@@ -67,7 +67,7 @@
       color: #4c7343;
       font-size: 20px;
       font-family: Noto Sans;
-      font-weight: bolder;
+      font-weight: 900;
     }
 
     #input-id {
