--- a/minwoo/pages/main.html
+++ b/minwoo/pages/main.html
@@ -73,6 +73,7 @@
       overflow-y: auto;
       overflow-x: hidden;
       display: flex;
+
       flex-wrap: wrap;
       justify-content: space-between;
 
@@ -109,38 +110,11 @@
       line-height: normal;
     }
 
-    .box1 {
+    .box {
       display: inline-block;
       overflow: hidden;
-      margin-top: 30px;
-      margin-left: 30px;
-      margin-right: -45px;
-      width: 128px;
-      height: 174px;
 
-      border-radius: 10px;
-      background: #fff;
-      box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
-    }
-
-    .box2 {
-      display: inline-block;
-      overflow: hidden;
-      margin-top: 30px;
-      margin-left: 30px;
-      margin-right: -45px;
-      width: 128px;
-      height: 174px;
-
-      border-radius: 10px;
-      background: #fff;
-      box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
-    }
-
-    .box3 {
-      display: inline-block;
-      overflow: hidden;
-      margin-top: 30px;
+      margin-top: 20px;
       margin-left: 30px;
       margin-right: -45px;
       width: 128px;
@@ -212,8 +186,20 @@
       margin-left: 14px;
     }
 
-    #setting {
-      margin-left: 255px;
+    #log-out {
+      width: 50px;
+      height: 27px;
+      flex-shrink: 0;
+      margin-left: 300px;
+      margin-top: -25px;
+
+      background: #4c7343;
+      color: #fffbd9;
+      font-size: 12px;
+      font-family: SUIT;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 25px;
     }
   </style>
 
@@ -270,12 +256,7 @@
               style="width: 30px; height: 30px"
             />
           </span>
-          <span id="setting">
-            <img
-              src="/mungTeam/minwoo//images/setting.png"
-              style="width: 30px; height: 30px"
-            />
-          </span>
+          <div id="log-out">로그아웃</div>
         </div>
       </div>
     </div>
